--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,23 @@
-body {
-    background-image: url("../assets/wallpaper.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+.background {
+    background: radial-gradient(#020A53, #000000);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.title {
+    font-family: 'Bungee Hairline', cursive;
+    font-size: 125px;
+    text-shadow: 0.5px 0.5px 0 #ffffff, -0.5px -0.5px 0 #ffffff, 0.5px -0.5px 0 #ffffff, -0.5px 0.5px 0 #ffffff;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+.subtitle {
+    font-size: 20px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 75%;
+    left: 50%;
+    letter-spacing: 0.35em;
 }
