--- a/css/play.css
+++ b/css/play.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("../assets/wallpaper.jpg");
+    background-image: url("../assets/background.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
